# AwesomeList

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  app.py  config.py  models.py  services.py
static/: styles.css
templates/: index.html  index.j2
