[tool.poetry]
name = "awesomelist"
version = "0.1.0"
description = ""
authors = ["Mark Chigrin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
aiofiles = "^0.6.0"
httpx = "^0.17.1"
jinja2 = "^2.11.3"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
